/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'land.chipmunk.chayapak'
version = 'rolling'
description = 'ChomeNS Bot'
java.sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenLocal()

    mavenCentral()

    maven {
        url = uri('https://repo.opencollab.dev/maven-snapshots/')
    }

    maven {
        url = uri('https://repo.opencollab.dev/maven-releases/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'com.github.steveice10:mcprotocollib:1.20.2-1-SNAPSHOT'
    implementation 'net.kyori:adventure-text-serializer-ansi:4.14.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.jline:jline:3.23.0'
    implementation 'com.github.ricksbrown:cowsay:1.1.0'
    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'org.luaj:luaj-jse:3.0.1'
    implementation 'net.dv8tion:JDA:5.0.0-beta.12'
    implementation 'joda-time:joda-time:2.12.4'
    implementation 'net.kyori:adventure-text-serializer-legacy:4.13.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    implementation 'io.socket:socket.io-client:2.1.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'land.chipmunk.chayapak.chomens_bot.Main'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
